# CGames

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt
apps/snake/: CMakeLists.txt  main.c  shader.frag  shader.vert
libs/: CMakeLists.txt
